make sure you cant scroll over to the collapsed panel

--- a/FERNS/ferns.css
+++ b/FERNS/ferns.css
@@ -1,5 +1,5 @@
 /* Main */
-body { margin: 0; padding: 0; }
+body { margin: 0; padding: 0; overflow-x: hidden; }
 #map { position: absolute; top: 0; bottom: 0; width: 100%; }
 
 /* Load wheel */
